bugs fixed, clean ups, path output, IPC back and forth communication added, path comparison list added

--- a/app-kiosk/public/index.html
+++ b/app-kiosk/public/index.html
@@ -49,6 +49,12 @@
           <a href="#" ipc="button-close">close app</a>
         </p>
       </article>
+
+      <article>
+        <p>Log</p>
+        <xmp>loading ...</xmp>
+      </article>
+
     </main>
 
   </body>
